--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <h1> Please follow these links to view the jupyter notebooks</h1>
 
-<p1> Swimming Pool Object Detection - JamesWattersIV.github.io/ObjectDetection/index.html<p1>
-<p1> Swimming Pool Health Analysis - JamesWattersIV.github.io/HealthAnalysis/index.html<p1>
+<p1><a href="JamesWattersIV.github.io/ObjectDetection/index.html">Swimming Pool Object Detection</a><p1>
+  
+  <hr>
+  
+<p1><a href="JamesWattersIV.github.io/HealthAnalysis/index.html">Swimming Pool Health Analysis</a><p1>
